Dispatcher commands and view, Keys property in TempObservablePairCollection, and some in TabPager view

--- a/MVVMCore/TODO.txt
+++ b/MVVMCore/TODO.txt
@@ -5,7 +5,7 @@
 -) когда вызывается ConvertBack? - When a value propagates from the binding target to the binding source
 6) в каком потоке запускается ContinueWith
 7) как работают кривые Безье и как из них сделать squircle
-8) ObservableDictionary
+8) ObservablePairCollection multi-thread access
 
 TaskContainer:
 
